FIX - adjusted styling to remove scrollbar from profile page

--- a/src/site/pages/employees/_employees.scss
+++ b/src/site/pages/employees/_employees.scss
@@ -3,6 +3,10 @@
   height: 100vh;
   overflow: hidden;
 
+  .back-link {
+    position: absolute;
+  }
+
   .employee-form {
     width: 300px;
     padding: 1rem 1rem 2rem;
